Fixed overflow issue of the scrollable

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,7 @@ html, body{
   height: 10%;
   justify-content: space-between;
   margin-top: 24px;
+  margin-bottom: 24px;
   opacity: 0.7;
   padding: 0 4px 0 4px;
   transition: all 0.3s ease;
@@ -132,7 +133,8 @@ html, body{
 
 /*Scrollable Styles and Logic*/
 .scrollable{
-  max-height: 70%;
+  display: table;
+  max-height: min(400px, 70%);
   width: 100%;
   overflow-y: auto;
 }
